# simplex2

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  main.py  prueba1.py  pyproject.toml
.github/workflows/: docker-publish.yml  release-please.yml
.github/worklows/: docker-publish.yml  release-please.yml
frontend/static/css/: style.css
frontend/static/js/: app.js  tablas.js
frontend/templates/: index.html  tablas.html
routers/: __init__.py  simplex.py
services/: __init__.py  simplex_service.py
test/: test_graph.py  test_graph_html.py  test_simplex.py
